[gd_scene load_steps=4 format=3 uid="uid://dup7r0nrptxj"]

[ext_resource type="PackedScene" uid="uid://5j3nkd57dwpk" path="res://scenes/prototype/grid_placement_scene.tscn" id="1_5yrsn"]
[ext_resource type="Script" path="res://scenes/main/game_main.gd" id="1_uhk2i"]
[ext_resource type="PackedScene" uid="uid://btlhmdbpe6gqk" path="res://scenes/main/tile_viewport_container.tscn" id="3_f2sao"]

[node name="GameMain" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhk2i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(1162, 812)
render_target_update_mode = 4

[node name="GridPlacementScene" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_5yrsn")]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
color = Color(0, 1, 1, 1)

[node name="NextTiles" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="TileViewportContainer" parent="HBoxContainer/MarginContainer/NextTiles" instance=ExtResource("3_f2sao")]
layout_mode = 2

[node name="TileViewportContainer2" parent="HBoxContainer/MarginContainer/NextTiles" instance=ExtResource("3_f2sao")]
layout_mode = 2

[node name="TileViewportContainer3" parent="HBoxContainer/MarginContainer/NextTiles" instance=ExtResource("3_f2sao")]
layout_mode = 2

[node name="TileViewportContainer4" parent="HBoxContainer/MarginContainer/NextTiles" instance=ExtResource("3_f2sao")]
layout_mode = 2
is_focus = true
